--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.1",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
