--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "node-sass": "^4.8.1",
     "postcss-loader": "^2.1.2",
     "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.1",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
