--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.2.2",
-    "vue": "^2.5.16"
+    "qs": "^6.5.2",
+    "vue": "^2.5.16",
+    "whatwg-fetch": "^2.0.4"
   }
 }
